Upgrade to Java 17
Upgraded to Java 17 using OpenRewrite Java 17 migration recipe